Finish data code generator
Refactor data classes and remove boilerplate code

--- a/Assets/Code Generation/Code Generation~/Code Generation.csproj
+++ b/Assets/Code Generation/Code Generation~/Code Generation.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-        <OutputPath>../../../</OutputPath>
+        <OutputPath>../</OutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     </PropertyGroup>
 
@@ -16,7 +16,7 @@
 
     <ItemGroup>
         <Reference Include="Core.Shared, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\..\..\..\..\Library\ScriptAssemblies\Core.Shared.dll</HintPath>
+            <HintPath>..\..\..\Library\ScriptAssemblies\Core.Shared.dll</HintPath>
             <Private>false</Private>
         </Reference>
     </ItemGroup>
